<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Profile"
    android:layout_margin="10dp"
    android:orientation="vertical">

    <Button
        android:id="@+id/btn_back"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bt_back"
        />

    <TextView
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_profile"
        android:textSize="24dp"
        android:textStyle="bold"
        android:gravity="center"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_name"
            />
        <EditText
            android:id="@+id/et_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_email"
            />
        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_tahun"
            />
        <EditText
            android:id="@+id/et_year_born"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            />

    </LinearLayout>

    <ImageButton
        android:id="@+id/btn_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_baseline_save_24"
        tools:ignore="ContentDescription"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_my_profile"
        android:textSize="24dp"
        android:textStyle="bold"
        android:gravity="center"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <TextView
            android:id="@+id/tv_my_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_name"
            />
        <TextView
            android:id="@+id/tv_my_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_email"
            />
        <TextView
            android:id="@+id/tv_my_year_born"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_tahun"
            />
    </LinearLayout>
    <ImageView
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:src="@drawable/kanon"
        android:layout_gravity="end"
        />
</LinearLayout>