<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:layout_margin="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <TextView
            android:id="@+id/tv_input_panjang"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_length"
            />
        <EditText
            android:id="@+id/et_length"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="2dp"
        >
        <TextView
            android:id="@+id/tv_input_lebar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_width"
            />
        <EditText
            android:id="@+id/et_width"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="2dp"
        >
        <TextView
            android:id="@+id/tv_input_tinggi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_height"
            />
        <EditText
            android:id="@+id/et_height"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_hitung"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_calculate"
        android:layout_marginTop="2dp"
        />

    <TextView
        android:id="@+id/tv_hasil"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_result"
        android:gravity="center"
        android:textSize="24dp"
        android:layout_marginTop="2dp"
        />


</LinearLayout>